# python-project-50

./: Makefile  README.md  pyproject.toml
basic_files/: gendiff.py
scripts/: gendiff_script.py
