[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["pythonprogrammer9999 <pythonprogrammer9999@gmail.com>"]
readme = "README.md"
packages = [{include = "basic_files"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "basic_files.gendiff:main"